# amlo

./: .flake8  .style.yapf  LICENSE  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint_and_test.yml
docs/source/: conf.py  index.rst
src/: generate_combos.py  main.py  zmq_com.py
src/amlro/: generate_combos.py  main.py  optimizer.py  optimizer_main.py  training_set_generator.py
tests/: __init__.py  requirements.txt
tests/amlro/: test_generate_combos.py  test_optimizer.py
