[metadata]
name = amlro
license = MIT
description = Active Machine Learning Reaction Optimization
long_description = file: README.md
author = Dulitha Prasanna Kulathunga
author_email = dulitha@iastate.edu
# classifiers=
#    <classifier 1>
#    <classifier 2>
#    <...>
#    <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src
